--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,6 +6,13 @@ michael:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+inactive:
+  name: Inactive User
+  email: inactive@example.com
+  password_digest: <%= User.digest('password') %>
+  admin: false
+  activated: false
+
 archer:
   name: Stering Archer
   email: duchess@example.gov
